[gd_scene load_steps=7 format=3 uid="uid://bo30iyjc41dfe"]

[ext_resource type="PackedScene" path="res://src/scenes/enemies/basic_enemy.tscn" id="1_enemy"]
[ext_resource type="PackedScene" path="res://src/scenes/player/basic_player.tscn" id="1_player"]
[ext_resource type="Script" path="res://src/scripts/test/test_game.gd" id="1_test"]
[ext_resource type="PackedScene" path="res://src/scenes/ui/resource_counter.tscn" id="5_counter"]
[ext_resource type="Script" path="res://src/scripts/managers/object_pool_manager.gd" id="2_pool"]
[ext_resource type="Script" path="res://src/scripts/managers/enemy_spawn_manager.gd" id="3_spawn"]
[ext_resource type="PackedScene" path="res://src/scenes/ui/wave_indicator.tscn" id="6_wave"]

[node name="TestGame" type="Node2D"]
script = ExtResource("1_test")
enemy_scene = ExtResource("1_enemy")

[node name="ObjectPoolManager" type="Node" parent="."]
script = ExtResource("2_pool")

[node name="EnemySpawnManager" type="Node" parent="."]
script = ExtResource("3_spawn")

[node name="Background" type="ColorRect" parent="."]
z_index = -1
offset_left = -2000.0
offset_top = -2000.0
offset_right = 2000.0
offset_bottom = 2000.0
color = Color(0.12, 0.15, 0.2, 1)

[node name="Player" parent="." instance=ExtResource("1_player")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="WaveIndicator" parent="UI" instance=ExtResource("6_wave")]

[node name="HealthBar" type="ProgressBar" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 47.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
value = 100.0
show_percentage = false

[node name="ResourceCounter" parent="UI" instance=ExtResource("5_counter")]
anchor_left = 1.0
